<resources>
    <string name="app_name">Adoptame</string>
    <string name="loging.message.email">Correo electrónico</string>
    <string name="loging.message.password">Contraseña</string>
    <string name="loging.button.singin">iniciar sesión</string>

    <string name="loging.error.messagge.signin">Imposible iniciar sesion %s</string>
    <string name="loging.error.messagge.signup">Imposible crear nuevo usuario %s</string>
    <string name="loging.notice.signin">Usuario agregado exitosamente</string>
    <string name="loging.message.nombrefundacion">Fundación</string>
    <string name="loging.message.direccion">Dirección</string>
    <string name="loging.message.telefono">Teléfono</string>
    <string name="loging.message.nit">Nit</string>

    <string name="signup.title">Crear Cuenta</string>
    <string name="VerBebes.title">Ver en adopción</string>

    <string name="loging.button.gotosignup">crear cuenta ></string>
    <string name="signup.button.signup">crear cuenta</string>
    <string name="loging.message.personaContacto">Representante legal</string>
    <string name="verbebes.menu.action.signoff">Cerrar sesión</string>
    <string name="signup_registro_completo">Gracias!</string>
    <string name="err_msg_name">No puede estar vacio</string>
    <string name="err_msg_email">Correo no valido</string>
    <string name="err_msg_password">Ingrese una contraseña</string>
    <string name="err_msg_phone">Ingrese número telefónico</string>
    <string name="err_msg_nit">Ingrese nit o numero de cedula</string>
    <string name="err_msg_direccion">No puede estar vacio</string>
    <string name="err_msg_representante">Ingrese nombre del personaContacto legal</string>

    <string name="main.titles.perros">Perros</string>
    <string name="main.title.gatos">Gatos</string>
    <string name="main.title.otros">Otros</string>
    <string name="main.title.perdidos">Perdidos y encontrados</string>
    <string name="main.notice.upload.init">En proceso de publicación</string>
    <string name="main.notice.upload.complete">Publicado exitosamente</string>
    <string name="main.error.dispatch.camera">Error al crear archivo</string>
    <string name="menu.action.logout">Cerrar sesión</string>
    <string name="main.mesage.picture.source">Seleccione una foto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add.perro.exitoso">agregado exitosamente</string>
    <string name="add_perro_noexitoso">No pudo ser agregado</string>
    <string name="add_perro">Agregar Perro</string>
    <string name="add_perro_aceptar">Aceptar</string>
    <string name="add_perro_cancelar">cancelar</string>
    <string name="main_message_picture_source">Selecciona una foto</string>
    <string name="search">Buscar</string>
    <string name="fav">Favoritos</string>
    <string name="verbebes.menu.action.about">Sobre</string>

    <string name="addcontact.messagge.title">Agregar Perro</string>
    <string name="addcontact.messagge.add">Aceptar</string>
    <string name="addcontact.messagge.cancel">Cancel</string>
    <string name="photolist_message_share">compartido</string>
    <string name="perroClick">perro click</string>
    <string name="all">Todos</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="favorites">Favorites</string>
    <string name="recipemain.menu.action.main">principal</string>
    <string name="global.menu.action.show_all">Mostrar todos</string>
    <string name="global.menu.action.show_fav">Mostrar faoritos</string>
    <string name="main_perro_info">Biografía</string>
    <string name="main_fundacion_info">Contacto</string>

    <string name="cargando.fotos">Espere que carguen las fotos para poder compartir</string>
    <string name="main_fundacio">Fundaciones</string>
    <string name="main_titles_otros">Otros</string>
    <string name="main_otros_info">Otros</string>
    <string name="main_titles_eventos">Eventos</string>
    <string name="main_titles_perdidos">Perdidos</string>


    <string-array name="SelectEspecie">
        <item>Perro</item>
        <item>Gato</item>
        <item>Hamster</item>
        <item>Paloma</item>
        <item>Ratón</item>
        <item>Conejo</item>
        <item>Caballo</item>
        <item>Otros</item>
        <item>OtrasAves</item>
    </string-array>

    <string-array name="SelectSexo">
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>

    <string-array name="SelectVacuna">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectEdad">
        <item>Años</item>
        <item>Meses</item>
    </string-array>

    <string-array name="SelectDiscapa">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectEsteril">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectTamano">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
        <item>MuyGrande</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="fundacion">Fundacion</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="direccion">Direccion</string>
    <string name="persona_encargada">Persona Encargada</string>
    <string name="nombre">Nombre</string>
    <string name="vacunado">Vacunado</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="discapacitado">Discapacitado</string>
    <string name="edad">Edad</string>
    <string name="tamano">Tamaño</string>
    <string name="sexo">Sexo</string>
    <string name="especie">Especie</string>
    <string name="nombre_evento">Nombre del Evento</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="tipo_evento">Tipo de Evento</string>
    <string name="celular">Celular</string>
    <string name="descripcion">Descripción</string>


</resources>
