<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNombreFundacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/fundacion"
            android:background="#E2E2E2"
            style="@style/titulos"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/linealPhone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/ic_phone"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.6"
                android:text="@string/telefono"
                style="@style/contenido"/>

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono"
                style="@style/contenido2"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linealEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/ic_email"
                />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/email"
                android:gravity="center_vertical"
                style="@style/contenido"/>


            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                style="@style/contenido2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/ic_address" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/direccion"
                style="@style/contenido"/>
            <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                style="@style/contenido2"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@mipmap/ic_person"
                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/persona_encargada"
                    android:gravity="center_vertical"
                    style="@style/contenido"/>


                <TextView
                    android:id="@+id/txtRepresentante"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/persona_encargada"
                    style="@style/contenido2"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>